feat 登入畫面退出系統

--- a/frontend/src/locales/lang/zh-TW/sys.json
+++ b/frontend/src/locales/lang/zh-TW/sys.json
@@ -68,6 +68,7 @@
     "forgetFormTitle": "重置密碼",
     "forgetPassword": "忘記密碼?",
     "loginButton": "登錄",
+    "exitbutton": "退出系統",
     "loginSuccessDesc": "歡迎回來",
     "loginSuccessTitle": "登錄成功",
     "mobile": "手機號碼",
