--- a/frontend/src/locales/lang/zh-TW/sys.json
+++ b/frontend/src/locales/lang/zh-TW/sys.json
@@ -83,9 +83,9 @@
     "registerButton": "註冊",
     "rememberMe": "記住我",
     "scanSign": "掃碼後點擊\"確認\"，即可完成登錄",
-    "signInDesc": "輸入您的個人詳細信息開始使用！",
+    "signInDesc": "輸入您的帳號密碼開始使用！",
     "signInFormTitle": "登錄",
-    "signInTitle": "開箱即用的中後台管理系統",
+    "signInTitle": "人事系統",
     "signUpFormTitle": "註冊",
     "smsCode": "簡訊驗證碼",
     "smsPlaceholder": "請輸入驗證碼",
